ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#what-is-ingress

# an ingress requires an ingress controller (which is a pod)
# on bare metal kubernetes installations there should/has to be a load balancer
# in between the the clients and the ingress controller
# e.g. a proxy server forwarding requests to the ingress controller
# in minikube you can use the command `minikube addons enable ingress` 
# for bare metal load balancers magaed inside the kubernetes cluster head for https://metallb.universe.tf/concepts/

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: myapp.com # uri of entrypoint to kubernetes cluster 
      http:
        paths:
        - backend:
            serviceName: myapp-internal-service # refers to metadata.name of an internal service
            servicePort: 8080 # refers to spec.ports.port of the selected service
